<resources>
    <string name="app_name">FHDstories</string>
    <string name="user">UserName</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="i_accept">I accept terms and condition</string>
    <string name="forgetpass">Forget Password?</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title1">First Story</string>
    <string name="subtitle1">Kotlin Learning</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_subtitle">Enter SubTitle</string>
    <string name="enter_desc">Enter Description</string>
    <string name="add_Story">Add Story</string>
    <string name="desc1">I started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 novI started learning kotlin in 2021 nov</string>

</resources>