<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStoryActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/custom_ed"
        android:maxLength="15"
        android:inputType="text"
        android:hint="@string/enter_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etsubTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_ed"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:maxLength="25"
        android:inputType="text"
        android:hint="@string/enter_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etTitle"
        />

    <EditText
        android:id="@+id/enterDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_ed"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="26dp"
        android:inputType="textMultiLine"
        android:lines="6"
        android:hint="@string/enter_desc"
        android:gravity="top|start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etsubTitle"/>

    <Button
        android:id="@+id/buttonStoryAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_Story"
        android:textColor="@color/darkPink"
        android:background="@drawable/custom_button"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>